# CV-Work

./: .gitignore  face_Lines.cpp  houghLines.cpp  sun2.cpp
Comp Vision/Dartboard/: face.cpp
Face/: Board  CMakeCache.txt  CMakeLists.txt  Face  Makefile  board.cpp  cmake_install.cmake  face.cpp  facev2.cpp
Hobie/: Hough  Hough.cpp  Makefile  cmake_install.cmake
Lab 1/Draw/: CMakeCache.txt
Lab 1/Gen-Display/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
Lab 1/Hello/: Hello  Makefile  cmake_install.cmake  hello.cpp
Lab 1/Mandrill/: CMakeLists.txt  Makefile  Mandrill
Lab 1/Test/: Test
Lab 2/: CMakeCache.txt  CMakeLists.txt  Correct  Makefile  cmake_install.cmake  convolution  convolution.cpp  correct.cpp
Lab 3/: CMakeCache.txt  CMakeLists.txt  ImageTwo.cpp  Makefile  filter2d.cpp  imageOne  imageOne.cpp  imageTwo
Lab 4/: CMakeCache.txt  Hough  Hough.cpp
Labs/Lab 1/Draw/: CMakeLists.txt  Draw  Makefile  cmake_install.cmake  draw.cpp
Labs/Lab 1/Gen-Display/: Display  Makefile  display.cpp
Labs/Lab 1/Hello/: CMakeCache.txt  CMakeLists.txt
Labs/Lab 1/Mandrill/: CMakeCache.txt  cmake_install.cmake  thr.cpp
Labs/Lab 1/Test/: CMakeCache.txt  Makefile  cmake_install.cmake
Labs/Lab 2/: CMakeLists.txt  convolution  convolution.cpp
Labs/Lab 3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filter2d.cpp
Labs/Lab 4/: CMakeLists.txt  Hough  Makefile  cmake_install.cmake
Latest/: facev2.cpp
Lines/: Me.md  houghLines.cpp
hobie/: Board  CMakeCache.txt  CMakeLists.txt  Makefile  board.cpp  cmake_install.cmake
yash/: a.out
(+1 files in other folders)
